add styles on inde.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,38 @@
     <title>Group 4</title>
 </head>
 <body>
+    <!-- Nav Bar -->
+    <nav class="nav-bar"></nav>
     
+    <!-- Hero Section -->
+    <section class="hero-section">
+        <div class="hero-section__wrapper">
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Our Story Section -->
+    <section class="our-story"></section>
+
+    <!-- Watch Our Story Section -->
+    <section></section>
+
+    <!-- Expertise Section -->
+    <section></section>
+
+    <!-- Meet Our Team Section -->
+    <section></section>
+
+    <!-- Contact Form Section -->
+    <section></section>
+
+    <!-- Footer -->
+    <footer> </footer>
 </body>
 </html>
