--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
     <title>Group 4</title>
 </head>
 <body>
@@ -27,7 +30,23 @@
     <section class="our-story"></section>
 
     <!-- Watch Our Story Section -->
-    <section></section>
+    <section class="watch-story">
+            <div class="watch-story__content">
+                <div class="watch-story__content-wrapper">
+                <img id="watch-story__play-button"src="resources/play.png" alt="Play Button">
+                <p class="watch-story__cta-p">Watch our story</p>
+                </div>
+            </div>
+    </section>
+
+    <section class="watch-story-2">
+        <div class="watch-story__content-2">
+
+            <img id="watch-story__play-button-2"src="resources/play.png" alt="Play Button">
+            <p class="watch-story__cta-p-2">Watch our story</p>
+
+        </div>
+</section>
 
     <!-- Expertise Section -->
     <section></section>
