Added two sections with styling

--- a/index.html
+++ b/index.html
@@ -49,7 +49,55 @@
 </section>
 
     <!-- Expertise Section -->
-    <section></section>
+    <section class="expertise-section">
+        <div class="expertise-section__content">
+            <div class="expertise-section__headline">
+                <h2>Expertise</h2>
+                <p class="expertise-section__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, quaerat.</p>
+            </div>
+
+            <div class="expertise-section__icons">
+                <div id="expertise-section__icon1">
+                    <img class="expertise-section__icon-img" src="resources/screen.png" alt="Web Design & Development">
+                    <h3 class="expertise-section__icons-headline">Web design & development</h3>
+                    <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+                </div>
+                <div id="expertise-section__icon2">
+                    <img class="expertise-section__icon-img" src="resources/pen.png" alt="Branding identity">
+                    <h3 class="expertise-section__icons-headline">Branding identity</h3>
+                    <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+
+                </div>
+                <div id="expertise-section__icon3">
+                    <img class="expertise-section__icon-img" src="resources/mobile.png" alt="Mobile App">
+                    <h3 class="expertise-section__icons-headline">Mobile app</h3>
+                    <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+
+                </div>
+                <div id="expertise-section__icon4">
+                    <img class="expertise-section__icon-img" src="resources/graph.png" alt="SEO">
+                    <h3 class="expertise-section__icons-headline">Search Engine Optimization</h3>
+                    <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+
+                </div>
+                <div id="expertise-section__icon5">
+                    <img class="expertise-section__icon-img" src="resources/gameboy.png" alt="Game development">
+                    <h3 class="expertise-section__icons-headline">Game development</h3>
+                    <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+
+                </div>
+                <div id="expertise-section__icon6">
+                    <img class="expertise-section__icon-img" src="resources/heart.png" alt="Made with love">
+                    <h3 class="expertise-section__icons-headline">Made with love</h3>
+                    <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+
+                </div>
+
+            </div>
+
+
+    </div>
+    </section>
 
     <!-- Meet Our Team Section -->
     <section></section>
