--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" href="resources/logo.png">
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
-    <title>Group 4</title>
+    <title>TAJAM - Group 4</title>
 </head>
 <body>
     <!-- Nav Bar -->
@@ -30,72 +31,86 @@
     <section class="our-story"></section>
 
     <!-- Watch Our Story Section -->
-    <section class="watch-story">
+    <!-- <section class="watch-story">
             <div class="watch-story__content">
                 <div class="watch-story__content-wrapper">
                 <img id="watch-story__play-button"src="resources/play.png" alt="Play Button">
+                <video id='video'>
+                    <source src="resources/never-gonna-give-you-up.mp4" type="video/mp4">
+                </video>
                 <p class="watch-story__cta-p">Watch our story</p>
                 </div>
             </div>
-    </section>
+    </section> -->
 
     <section class="watch-story-2">
+
+        <video id='video'>
+            <source src="resources/never-gonna-give-you-up.mp4.mp4" type="video/mp4">
+        </video>
+
         <div class="watch-story__content-2">
 
-            <img id="watch-story__play-button-2"src="resources/play.png" alt="Play Button">
+            <img id="watch-story__play-button-2" src="resources/play.png" alt="Play Button">
             <p class="watch-story__cta-p-2">Watch our story</p>
 
         </div>
 </section>
+
+
 
     <!-- Expertise Section -->
     <section class="expertise-section">
         <div class="expertise-section__content">
             <div class="expertise-section__headline">
                 <h2>Expertise</h2>
-                <p class="expertise-section__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, quaerat.</p>
+                <p class="expertise-section__p">Lorem ipsum dolor sit amet proin gravida nibh vel velit.</p>
             </div>
 
             <div class="expertise-section__icons">
-                <div id="expertise-section__icon1">
-                    <img class="expertise-section__icon-img" src="resources/screen.png" alt="Web Design & Development">
-                    <h3 class="expertise-section__icons-headline">Web design & development</h3>
-                    <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
-                </div>
-                <div id="expertise-section__icon2">
-                    <img class="expertise-section__icon-img" src="resources/pen.png" alt="Branding identity">
-                    <h3 class="expertise-section__icons-headline">Branding identity</h3>
-                    <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+                <div class="expertise-section__icons-wrapper">
+
+                    <div id="expertise-section__icon1">
+                        <img class="expertise-section__icon-img" src="resources/screen.png" alt="Web Design & Development">
+                        <h3 class="expertise-section__icons-headline">Web design & development</h3>
+                        <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+                    </div>
+                    <div id="expertise-section__icon2">
+                        <img class="expertise-section__icon-img" src="resources/pen.png" alt="Branding identity">
+                        <h3 class="expertise-section__icons-headline">Branding identity</h3>
+                        <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+
+                    </div>
+                    <div id="expertise-section__icon3">
+                        <img class="expertise-section__icon-img" src="resources/mobile.png" alt="Mobile App">
+                        <h3 class="expertise-section__icons-headline">Mobile app</h3>
+                        <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+
+                    </div>
+                    <div id="expertise-section__icon4">
+                        <img class="expertise-section__icon-img" src="resources/graph.png" alt="SEO">
+                        <h3 class="expertise-section__icons-headline">Search Engine Optimization</h3>
+                        <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+
+                    </div>
+                    <div id="expertise-section__icon5">
+                        <img class="expertise-section__icon-img" src="resources/gameboy.png" alt="Game development">
+                        <h3 class="expertise-section__icons-headline">Game development</h3>
+                        <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+
+                    </div>
+                    <div id="expertise-section__icon6">
+                        <img class="expertise-section__icon-img" src="resources/heart.png" alt="Made with love">
+                        <h3 class="expertise-section__icons-headline">Made with love</h3>
+                        <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+
+                    </div>
+                
+
 
                 </div>
-                <div id="expertise-section__icon3">
-                    <img class="expertise-section__icon-img" src="resources/mobile.png" alt="Mobile App">
-                    <h3 class="expertise-section__icons-headline">Mobile app</h3>
-                    <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
 
-                </div>
-                <div id="expertise-section__icon4">
-                    <img class="expertise-section__icon-img" src="resources/graph.png" alt="SEO">
-                    <h3 class="expertise-section__icons-headline">Search Engine Optimization</h3>
-                    <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
-
-                </div>
-                <div id="expertise-section__icon5">
-                    <img class="expertise-section__icon-img" src="resources/gameboy.png" alt="Game development">
-                    <h3 class="expertise-section__icons-headline">Game development</h3>
-                    <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
-
-                </div>
-                <div id="expertise-section__icon6">
-                    <img class="expertise-section__icon-img" src="resources/heart.png" alt="Made with love">
-                    <h3 class="expertise-section__icons-headline">Made with love</h3>
-                    <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
-
-                </div>
-
-            </div>
-
-
+        </div>
     </div>
     </section>
 
@@ -107,5 +122,7 @@
 
     <!-- Footer -->
     <footer> </footer>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
