--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <!-- Mobile hamburger menu / -->
             <nav class="nav-bar">
                 <ul>
-                    <li>HOME</li>
+                    <li id="home">HOME</li>
                     <li>ABOUT</li>
                     <li>EXPERTISE</li>
                     <li>TEAMS</li>
