--- a/index.html
+++ b/index.html
@@ -106,6 +106,48 @@
     <section></section>
 
     <!-- Footer -->
-    <footer> </footer>
+    <footer class="footer">
+        <div class="footer__wrapper">
+                <div class="footer__info-card">
+                    <div class="footer__logo">
+                    <a href="index.html"> 
+                        <img src="./resources/logo.png" alt="company logo">
+                    </a>
+                </div>
+                    <p class="footer__text">
+                        lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh elit. Duis sed odio sit amet auctror a ornare odio non mauris vitae erat in elit.
+                    </p>
+                </div>
+                <div class="footer__info-card">
+                    <h3 class="footer__card-headline">OUR STUDIO</h4>
+                    <div class="footer__card-content">
+                        <img class="footer__card-logo" src="./resources/big104.png" alt="company logo">
+                        <p>Ruko cucruk, Jl. Radio luar dalem jos </br> No. 12- 13, Kalideres - Jakarta Barat </br>
+                            11480 - Indonesia</p>
+                    </div>
+                    <div class="footer__card-content">
+                        <img class="footer__card-logo" src="./resources/phone351.png" alt="company logo">
+                        <p>0049 176 6829 372</p>
+                    </div>
+                </div>
+                <div class="footer__info-card">
+                    <h3 class="footer__card-headline">STAY IN TOUCH</h5>
+                    <form class="footer__subscribe-form">
+                        <input class="footer__input" placeholder="Subscribe our Newsletter" type="email">
+                        <button class="footer__button" type="submit"><img src="./resources/paper122.png"></button>
+                    </form>
+                    <div>
+                        <ul>
+                            <li>s</li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
+                </div>
+        </div>
+      
+    </footer>
 </body>
 </html>
