add social media icons

--- a/index.html
+++ b/index.html
@@ -138,11 +138,12 @@
                     </form>
                     <div>
                         <ul>
-                            <li>s</li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li><img src="./resources/instagram.png" alt="instagram logo"></li>
+                            <li><img src="./resources/facebook.png" alt="facebook logo"></li>
+                            <li><img src="./resources/dribbble.png" alt="dribbble log"></li>
+                            <li><img src="./resources/gplus.png" alt="google plus logo"></li>
+                            <li><img src="./resources/twitter.png" alt="twiiter logo"></li>
+                            <li><img src="./resources/youtube.png" alt="youtube logo"></li>
                         </ul>
                     </div>
                 </div>
