--- a/index.html
+++ b/index.html
@@ -116,36 +116,40 @@
             <div class="expertise-section__icons">
                 <div class="expertise-section__icons-wrapper">
 
-                    <div id="expertise-section__icon1">
+                    <div class="expertise-section__icon" id="expertise-section__icon1">
                         <img class="expertise-section__icon-img" src="resources/screen.png" alt="Web Design & Development">
-                        <h3 class="expertise-section__icons-headline">Web design & development</h3>
-                        <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+                        <div class="expertise-section__icon-text">
+
+                            <h3 class="expertise-section__icons-headline">Web design & development</h3>
+                            <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+                        </div>
                     </div>
-                    <div id="expertise-section__icon2">
+                    <div class="expertise-section__icon" id="expertise-section__icon2">
                         <img class="expertise-section__icon-img" src="resources/pen.png" alt="Branding identity">
+                        <div class="expertise-section__icon-text"></div>
                         <h3 class="expertise-section__icons-headline">Branding identity</h3>
                         <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
-
+                        </div>
                     </div>
-                    <div id="expertise-section__icon3">
+                    <div class="expertise-section__icon" id="expertise-section__icon3">
                         <img class="expertise-section__icon-img" src="resources/mobile.png" alt="Mobile App">
                         <h3 class="expertise-section__icons-headline">Mobile app</h3>
                         <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
 
                     </div>
-                    <div id="expertise-section__icon4">
+                    <div class="expertise-section__icon" id="expertise-section__icon4">
                         <img class="expertise-section__icon-img" src="resources/graph.png" alt="SEO">
                         <h3 class="expertise-section__icons-headline">Search Engine Optimization</h3>
                         <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
 
                     </div>
-                    <div id="expertise-section__icon5">
+                    <div class="expertise-section__icon" id="expertise-section__icon5">
                         <img class="expertise-section__icon-img" src="resources/gameboy.png" alt="Game development">
                         <h3 class="expertise-section__icons-headline">Game development</h3>
                         <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
 
                     </div>
-                    <div id="expertise-section__icon6">
+                    <div class="expertise-section__icon" id="expertise-section__icon6">
                         <img class="expertise-section__icon-img" src="resources/heart.png" alt="Made with love">
                         <h3 class="expertise-section__icons-headline">Made with love</h3>
                         <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
