--- a/index.html
+++ b/index.html
@@ -255,7 +255,21 @@
 
         <div class="contact-form-section__happy-clients">
             <h3 class="contact-form-section__happy-clients-headline">Our Happy Clients</h3>
+            <div class="contact-form-section__happy-clients-icon-wrapper">
+                <img class="contact-form-section__happy-clients-img" src="resources/Zara_Logo.svg" alt="Zara">
+                <img class="contact-form-section__happy-clients-img" src="resources/Logo_of_Mango_(new).png" alt="Mango">
+                <img class="contact-form-section__happy-clients-img" src="resources/1280px-Barneys_New_York_Logo.svg" alt="Barneys">
+                <img class="contact-form-section__happy-clients-img" src="resources/1280px-Gucci_Logo.svg" alt="Gucci">
+                <img class="contact-form-section__happy-clients-img" src="resources/Calvin_klein_logo.png" alt="Calvin Klein">
+                <img class="contact-form-section__happy-clients-img" src="resources/1280px-Logo_NIKE.png" alt="Nike">
+                <img class="contact-form-section__happy-clients-img" src="resources/Converse_logo.png" alt="Converse">
+                <img class="contact-form-section__happy-clients-img" src="resources/Puma_logo.png" alt="Puma">
+                <img class="contact-form-section__happy-clients-img" src="resources/1280px-Levi's_logo.png" alt="Levi's">
+                <img class="contact-form-section__happy-clients-img" src="resources/Converse_logo.png" alt="Billabong">
+                <img class="contact-form-section__happy-clients-img" src="resources/Billabong.png" alt="Converse">
 
+
+            </div>
         
         
         </div>
