add links and copywrite

--- a/index.html
+++ b/index.html
@@ -148,7 +148,16 @@
                     </div>
                 </div>
         </div>
-      
+        <div class="footer__wrapper-bottom">
+            <div>
+                <ul>
+                    <li>HELP</li>
+                    <li>TERMS & CONDITION</li>
+                    <li>PRIVACY</li>
+                </ul>
+            </div>
+            <p>Copyright © 2015 - Tajem Creative</p>
+        </div>
     </footer>
 </body>
 </html>
