--- a/index.html
+++ b/index.html
@@ -285,7 +285,8 @@
                     <div class="footer__logo">
                     <a href="index.html"> 
                         <img src="./resources/logo.png" alt="company logo">
-                    </a>
+                    </a> 
+                    <p class="logo-text">tajam</p>
                 </div>
                     <p class="footer__text">
                         lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh elit. Duis sed odio sit amet auctror a ornare odio non mauris vitae erat in elit.
@@ -332,7 +333,6 @@
             <p>Copyright © 2015 - Tajem Creative</p>
         </div>
     </footer>
-    <footer> </footer>
 
     <script src="scripts.js"></script>
 </body>
