--- a/index.html
+++ b/index.html
@@ -232,7 +232,6 @@
 
     <!-- Contact Form Section -->
     <section class="contact-form-section">
-
         <div class="contact-form-section__contact-form">
             <h3 class="contact-form-section__contact-form-headline">Give us some good news</h3>
             <form class="contact-form-section__contact-form-wrapper"action="/submit" method="post">
@@ -268,19 +267,14 @@
 
 
             </div>
-        
-        
         </div>
-
-
-
-
 
     </section>
 
     <!-- Footer -->
     <footer class="footer">
         <div class="footer__wrapper">
+            <div class="footer__info-cards"> 
                 <div class="footer__info-card">
                     <div class="footer__logo">
                     <a href="index.html"> 
@@ -321,16 +315,17 @@
                         </ul>
                     </div>
                 </div>
-        </div>
-        <div class="footer__wrapper-bottom">
-            <div>
-                <ul>
-                    <li>HELP</li>
-                    <li>TERMS & CONDITION</li>
-                    <li>PRIVACY</li>
-                </ul>
             </div>
-            <p>Copyright © 2015 - Tajem Creative</p>
+            <div class="footer__bottom">
+                <div>
+                    <ul>
+                        <li>HELP</li>
+                        <li>TERMS & CONDITION</li>
+                        <li>PRIVACY</li>
+                    </ul>
+                </div>
+                <p>Copyright © 2015 - Tajem Creative</p>
+            </div>
         </div>
     </footer>
 
